[gd_scene load_steps=5 format=3 uid="uid://do0o8aqqmmmlj"]

[ext_resource type="Script" uid="uid://btknoqxml4ghf" path="res://Scripts/Main Menu.gd" id="1_r752f"]
[ext_resource type="AudioStream" uid="uid://cjhfwfsyaih6q" path="res://Sounds/music/waiting-time-175800.mp3" id="2_0u7u3"]
[ext_resource type="Theme" uid="uid://cb8utilpq2brs" path="res://Resources/pause_and_menu_theme.tres" id="2_8ye2w"]
[ext_resource type="Texture2D" uid="uid://66hhd27hjdj8" path="res://Icons/disasters.png" id="3_wgml2"]

[node name="Main Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r752f")

[node name="Panel" type="Panel" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8ye2w")

[node name="Title" type="Label" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 287.0
offset_top = 10.0
offset_right = 941.0
offset_bottom = 81.0
scale = Vector2(2, 2)
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 50
text = "Natural Disaster The Game"

[node name="Disasters" type="Sprite2D" parent="Title"]
process_mode = 3
position = Vector2(698.5, 39.5)
scale = Vector2(4.00438, 4.34087)
texture = ExtResource("3_wgml2")

[node name="Menu" type="VBoxContainer" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 511.0
offset_top = 312.0
offset_right = 815.0
offset_bottom = 632.0
scale = Vector2(3, 1.5)
theme = ExtResource("2_8ye2w")

[node name="singleplayer" type="Button" parent="Menu"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 50
text = "Singleplayer"

[node name="multiplayer" type="Button" parent="Menu"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 50
text = "Multiplayer"

[node name="Settings" type="Button" parent="Menu"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="Exit" type="Button" parent="Menu"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 50
text = "Exit"

[node name="Multiplayer" type="VBoxContainer" parent="."]
process_mode = 3
visible = false
layout_mode = 0
offset_left = 651.0
offset_top = 194.0
offset_right = 843.0
offset_bottom = 606.0
scale = Vector2(3, 1.5)
theme = ExtResource("2_8ye2w")

[node name="username label" type="Label" parent="Multiplayer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
text = "Username:"

[node name="Label" type="Label" parent="Multiplayer"]
visible = false
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Your Username is Invalid"

[node name="username" type="LineEdit" parent="Multiplayer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
placeholder_text = "Michael2911"

[node name="Ip label" type="Label" parent="Multiplayer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
text = "IP:"

[node name="ip" type="LineEdit" parent="Multiplayer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
placeholder_text = "127.0.0.1"

[node name="port label" type="Label" parent="Multiplayer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
text = "Port:"

[node name="port" type="LineEdit" parent="Multiplayer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
placeholder_text = "25565"

[node name="HBoxContainer" type="HBoxContainer" parent="Multiplayer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
alignment = 1

[node name="join" type="Button" parent="Multiplayer/HBoxContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
text = "Join"

[node name="host" type="Button" parent="Multiplayer/HBoxContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
text = "host
"

[node name="Back" type="Button" parent="Multiplayer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="Settings" type="VBoxContainer" parent="."]
process_mode = 3
visible = false
layout_mode = 0
offset_left = 507.0
offset_top = 58.0
offset_right = 842.0
offset_bottom = 703.0
scale = Vector2(3, 1.5)
theme = ExtResource("2_8ye2w")

[node name="fps" type="CheckButton" parent="Settings"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
text = "FPS:"

[node name="vsync" type="CheckButton" parent="Settings"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
text = "Vsync:"

[node name="antialiasing" type="CheckButton" parent="Settings"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
text = "Antialiasing:"

[node name="Fullscreen" type="CheckButton" parent="Settings"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
text = "Fullscreen:"

[node name="Resolutions Label" type="Label" parent="Settings"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
text = "Resolution:"

[node name="resolutions" type="OptionButton" parent="Settings"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30

[node name="quality Label" type="Label" parent="Settings"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
text = "quality:"

[node name="quality" type="OptionButton" parent="Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
selected = 2
item_count = 3
popup/item_0/text = "Low"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2

[node name="Volumen Label" type="Label" parent="Settings"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
text = "Volumen:"

[node name="Volumen" type="HSlider" parent="Settings"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
max_value = 1.0
step = 0.001
value = 1.0

[node name="Volumen Music Label2" type="Label" parent="Settings"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
text = "Music Volumen:"

[node name="Volumen Music" type="HSlider" parent="Settings"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
max_value = 1.0
step = 0.001
value = 0.5

[node name="Time Label" type="Label" parent="Settings"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
text = "Time disaster/weather:"

[node name="Time" type="HSlider" parent="Settings"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
max_value = 3600.0
value = 500.0

[node name="Back" type="Button" parent="Settings"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_8ye2w")
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="Music" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("2_0u7u3")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="Menu/singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="Menu/multiplayer" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Menu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_exit_pressed"]
[connection signal="text_changed" from="Multiplayer/username" to="." method="_on_username_text_changed"]
[connection signal="text_changed" from="Multiplayer/ip" to="." method="_on_ip_text_changed"]
[connection signal="text_changed" from="Multiplayer/port" to="." method="_on_port_text_changed"]
[connection signal="pressed" from="Multiplayer/HBoxContainer/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Multiplayer/HBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Multiplayer/Back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="Settings/fps" to="." method="_on_fps_toggled"]
[connection signal="toggled" from="Settings/vsync" to="." method="_on_vsycn_toggled"]
[connection signal="toggled" from="Settings/antialiasing" to="." method="_on_antialiasing_toggled"]
[connection signal="toggled" from="Settings/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="item_selected" from="Settings/resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="item_selected" from="Settings/quality" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="Settings/Volumen" to="." method="_on_volumen_value_changed"]
[connection signal="value_changed" from="Settings/Volumen Music" to="." method="_on_volumen_music_value_changed"]
[connection signal="value_changed" from="Settings/Time" to="." method="_on_h_slider_2_value_changed"]
[connection signal="pressed" from="Settings/Back" to="." method="_on_back_pressed"]
